# nixlings

./: Cargo.toml  flake.nix  info.toml
excercises/building-with-flakes/: flake.nix
excercises/hello-nix/: flake.nix
excercises/overriding-packages/: flake.nix
excercises/package-management/: flake.nix
src/: main.rs
