[package]
name = "nixlings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
serde = { version = "1.0.202", features = ["derive"] }
toml = "0.8.13"
toml_edit = "0.22.13"
which = "6.0.1"
